workloads/ingress/base/default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: default
  labels:
    app: default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
        - name: backend
          image: gcr.io/google_containers/defaultbackend-amd64:1.5
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: default
  labels:
    app: default-backend
spec:
  type: NodePort
  selector:
    app: default-backend
  ports:
    - port: 80
      targetPort: 8080
