workloads/ingress/base/service-proxies.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: default
spec:
  type: ExternalName
  externalName: auth-api.auth.svc.cluster.local
  ports:
    - port: 8000
      targetPort: 8000
        protocol: TCP
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: my-api
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: scan-api
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: character-api
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: location-api
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: info-api
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: chat-api
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
